--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gulp-concat": "^2.5.2",
     "gulp-nodemon": "^1.0.5",
     "gulp-shell": "^0.4.0",
-    "gulp-uglify": "^1.1.0"
+    "gulp-uglify": "^1.1.0",
+    "gulp-minify-css": "^1.0.0",
+    "gulp-usemin": "^0.3.11"
   },
   "author": "Nikita Popov",
   "license": "ISC",
