--- a/static/bower.json
+++ b/static/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.2",
     "jquery": "~2.1.3",
     "angular-bootstrap": "~0.12.1",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "angular-file-upload": "~1.1.5"
   }
 }
