--- a/static/bower.json
+++ b/static/bower.json
@@ -18,6 +18,7 @@
     "jquery": "~2.1.3",
     "angular-bootstrap": "~0.12.1",
     "bootstrap": "~3.3.2",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "js-xls": "~0.7.5"
   }
 }
