--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "author": "Nikita Popov <losnikitos@gmail.com>",
   "debversion": "DEB_VERSION",
   "dependencies": {
-    "express": "~4.0.0"
+    "express": "~4.0.0",
+    "multer": "^0.1.8",
+    "xlsjs": "^0.7.5"
   },
   "engines": {
     "node": ">= 0.10.0"
