--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "debversion": "DEB_VERSION",
   "dependencies": {
     "express": "~4.0.0",
+    "jszip": "^2.5.0",
     "multer": "^0.1.8",
-    "xlsjs": "^0.7.5"
+    "xlsx": "~0.7.12"
   },
   "engines": {
     "node": ">= 0.10.0"
