--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,14 @@
   "author": "Nikita Popov <losnikitos@gmail.com>",
   "debversion": "DEB_VERSION",
   "dependencies": {
+    "async": "^0.9.0",
+    "cheerio": "^0.19.0",
     "express": "~4.0.0",
     "jszip": "^2.5.0",
+    "lodash": "^3.5.0",
     "multer": "^0.1.8",
+    "q": "^1.2.0",
+    "request": "^2.53.0",
     "xlsx": "~0.7.12"
   },
   "engines": {
